<resources>
    <string name="app_name">WeatherCheck</string>
    <string name="search">Search</string>
    <string name="back">back</string>
    <string name="_110"><![CDATA[>110]]></string>
    <string name="_56_110">56-110</string>
    <string name="_31_55">31-55</string>
    <string name="_16_30">16-30</string>
    <string name="_0_15">0-15</string>
    <string name="pm2_5">PM2.5</string>
    <string name="_240"><![CDATA[>240]]></string>
    <string name="_181_240">181-240</string>
    <string name="_121_180">121-180</string>
    <string name="_61_120">61-120</string>
    <string name="_0_60">0-60</string>
    <string name="o3">O3</string>
    <string name="_180"><![CDATA[>180]]></string>
    <string name="_91_180">91-180</string>
    <string name="_51_90">51-90</string>
    <string name="_26_50">26-50</string>
    <string name="_0_25">0-25</string>
    <string name="pm10">PM10</string>
    <string name="_400"><![CDATA[>400]]></string>
    <string name="_201_400">201-400</string>
    <string name="_101_200">101-200</string>
    <string name="_51_100">51-100</string>
    <string name="_0_50">0-50</string>
    <string name="no2">NO2</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="index">Index</string>
    <string name="very_poor">Very Poor</string>
    <string name="poor">Poor</string>
    <string name="moderate">Moderate</string>
    <string name="fair">Fair</string>
    <string name="good">Good</string>
    <string name="quality">Quality</string>
    <string name="london">London</string>
    <string name="_12">12℃</string>
    <string name="enter_city">Enter City:</string>
    <string name="co">CO</string>
    <string name="nh3">NH3</string>
    <string name="no">NO</string>
    <string name="so2">SO2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_temp">Temp</string>
    <string name="city">City</string>
</resources>